# bhas-master-node-esp32

./: CMakeLists.txt  README.md
components/bhas-lib/: CMakeLists.txt
components/bhas-lib/communication/: message.h
components/bhas-lib/communication/channels/: can_channel.cpp  can_channel.h  local_echo_channel.cpp
components/bhas-lib/communication/encoders/: can_encoder.h
components/bhas-lib/entities/: action.h  event.h
components/bhas-lib/logging/: message_logger.cpp  message_logger.h  message_printer.h
components/bhas-lib/nodes/: base_node.cpp  base_node.h  master_node.cpp  master_node.h  node_manager.h
main/: main.cpp
